--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
               </ul>
               <ul class="projectThumb">
                 <li><a href="#thesis" class="projectTitle">Connections</a></li>
-                <li><a href="#thesis-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/thesis_bible.jpg"></a></li>
-                <li><a href="#thesis-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/thesis_bible1.jpg"></a></li>
-                <li><a href="#thesis-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/thesis_society.jpg"></a></li>
-                <li><a href="#thesis-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/thesis_doves.jpg"></a></li>
-                <li><a href="#thesis-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/thesis_cases.jpg"></a></li>
-                <li><a href="#thesis-7"><span class="slideLink visuallyhidden">Slide 7</span><img src="img/400w/thesis_cards.jpg"></a></li>
-                <li><a href="#thesis-8"><span class="slideLink visuallyhidden">Slide 8</span><img src="img/400w/thesis_brochure.jpg"></a></li>
+                <li><a href="#thesis-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/thesis_cards.jpg"></a></li>
+                <li><a href="#thesis-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/thesis_brochure.jpg"></a></li>
+                <li><a href="#thesis-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/thesis_bible.jpg"></a></li>
+                <li><a href="#thesis-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/thesis_bible1.jpg"></a></li>
+                <li><a href="#thesis-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/thesis_society.jpg"></a></li>
+                <li><a href="#thesis-7"><span class="slideLink visuallyhidden">Slide 7</span><img src="img/400w/thesis_doves.jpg"></a></li>
+                <li><a href="#thesis-8"><span class="slideLink visuallyhidden">Slide 8</span><img src="img/400w/thesis_cases.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#bugs" class="projectTitle">Specimens</a></li>
-                <li><a href="#bugs-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/bugs1.jpg"></a></li>
-                <li><a href="#bugs-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/bugs2.jpg"></a></li>
+                <li><a href="#bugs-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/bugs_typographic.jpg"></a></li>
+                <li><a href="#bugs-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/bugs_fabulous.jpg"></a></li>
                 <li><a href="#bugs-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/bugs_bee.jpg"></a></li>
-                <li><a href="#bugs-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/bugs_tiny.jpg"></a></li>
-                <li><a href="#bugs-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/bugs_typographic.jpg"></a></li>
+                <li><a href="#bugs-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/bugs2.jpg"></a></li>
+                <li><a href="#bugs-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/bugs1.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#love" class="projectTitle">Love</a></li>
-                <li><a href="#love-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/love.jpg"></a></li>
-                <li><a href="#love-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/love1.jpg"></a></li>
-                <li><a href="#love-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/love2.jpg"></a></li>
+                <li><a href="#love-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/love1.jpg"></a></li>
+                <li><a href="#love-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/love2.jpg"></a></li>
+                <li><a href="#love-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/love.jpg"></a></li>
               </ul>
               <ul class="projectThumb">
                 <li><a href="#jonah" class="projectTitle">Jonah</a></li>
@@ -162,6 +162,38 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
+            <div class="image sizable"><img alt="" data-src="thesis_cards" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/thesis_cards.jpg"></noscript>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="thesis-3" class="slide">
+          <div class="wrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper">
+            <div class="image sizable"><img alt="" data-src="thesis_brochure" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/thesis_brochure.jpg"></noscript>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="info sizable">
+              <div class="infoinner">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="thesis-4" class="slide">
+          <div class="wrapper">
+            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
+          </div>
+          <div class="wrapper">
             <div class="image sizable"><img alt="" data-src="thesis_bible" data-ext=".jpg" class="responsive">
               <noscript><img alt="" src="img/400w/thesis_bible.jpg"></noscript>
             </div>
@@ -173,7 +205,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-3" class="slide">
+        <div id="thesis-5" class="slide">
           <div class="wrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -189,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-4" class="slide">
+        <div id="thesis-6" class="slide">
           <div class="wrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -218,7 +250,7 @@
             </div>
           </div>
         </div>
-        <div id="thesis-5" class="slide">
+        <div id="thesis-7" class="slide">
           <div class="wrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
@@ -234,45 +266,13 @@
             </div>
           </div>
         </div>
-        <div id="thesis-6" class="slide">
+        <div id="thesis-8" class="slide last">
           <div class="wrapper">
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
             <div class="image sizable"><img alt="" data-src="thesis_cases" data-ext=".jpg" class="responsive">
               <noscript><img alt="" src="img/400w/thesis_cases.jpg"></noscript>
-            </div>
-          </div>
-          <div class="wrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="thesis-7" class="slide">
-          <div class="wrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="thesis_cards" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/thesis_cards.jpg"></noscript>
-            </div>
-          </div>
-          <div class="wrapper">
-            <div class="info sizable">
-              <div class="infoinner">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="thesis-8" class="slide last">
-          <div class="wrapper">
-            <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
-          </div>
-          <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="thesis_brochure" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/thesis_brochure.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -302,8 +302,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="bugs1" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/bugs1.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -318,8 +318,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="bugs2" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/bugs2.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs_fabulous" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/bugs_fabulous.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -350,8 +350,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="bugs_tiny" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/bugs_tiny.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs2" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/bugs2.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -366,8 +366,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="bugs1" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/bugs1.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -397,8 +397,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="love" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/love.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="love1" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/love1.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -413,8 +413,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="love1" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/love1.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="love2" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/love2.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
@@ -429,8 +429,8 @@
             <div class="button sizable"><a href="#" class="ir infobutton">Show info</a></div>
           </div>
           <div class="wrapper">
-            <div class="image sizable"><img alt="" data-src="love2" data-ext=".jpg" class="responsive">
-              <noscript><img alt="" src="img/400w/love2.jpg"></noscript>
+            <div class="image sizable"><img alt="" data-src="love" data-ext=".jpg" class="responsive">
+              <noscript><img alt="" src="img/400w/love.jpg"></noscript>
             </div>
           </div>
           <div class="wrapper">
