Add compressed images, add drop cap

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">The BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
+              <p><span style="margin-left:-0.1em" class="dropcap">T</span><span class="leader">he BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">When BYU web community</span><span> was tasked with redesigning BYU’s home page, it was most important to me that we achieve the right mood. We took inspiration from some of the beautiful places around campus and aimed for the same sort of dignified, inviting feeling on the web. The accompanying templates are meant to make it easy for campus entities to create sites that fit with the BYU web brand.</span></p>
+              <p><span style="margin-left:-0.1em" class="dropcap">W</span><span class="leader">hen the BYU web community</span><span> was tasked with redesigning BYU’s home page, it was most important to me that we achieve the right mood. We took inspiration from some of the beautiful places around campus and aimed for the same sort of dignified, inviting feeling on the web. The accompanying templates are meant to make it easy for campus entities to create sites that fit with the BYU web brand.</span></p>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">I worked extensively</span><span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</span></p>
+              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> worked extensively</span><span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</span></p>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">For my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful works ever created in print. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, masterpieces from the Kelmscott and Doves presses, Limited Editions and Grolier Club releases, Philip Smith bindings, books illustrated by Picasson and Braqua, and other breathtaking books.</span></p>
+              <p><span style="margin-left:0" class="dropcap">F</span><span class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful works ever created in print. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, masterpieces from the Kelmscott and Doves presses, Limited Editions and Grolier Club releases, Philip Smith bindings, books illustrated by Picasson and Braqua, and other breathtaking books.</span></p>
             </div>
           </div>
         </div>
@@ -293,7 +293,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">I’ve been fascinated with insects</span><span> ever since my freshman Biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects I’ve ever done.</span></p>
+              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader">’ve been fascinated with insects</span><span> ever since my freshman Biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects I’ve ever done.</span></p>
             </div>
           </div>
         </div>
@@ -388,7 +388,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">This letterpress broadside</span><span> was created to celebrate marriage. The text was taken from CS Lewis (<i>Mere Christianity</i>) It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</span></p>
+              <p><span style="margin-left:0" class="dropcap">T</span><span class="leader">his letterpress broadside</span><span> was created to celebrate marriage. The text was taken from CS Lewis (<i>Mere Christianity</i>) It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</span></p>
             </div>
           </div>
         </div>
@@ -451,7 +451,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">I often prefer</span><span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</span></p>
+              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> often prefer</span><span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</span></p>
             </div>
           </div>
         </div>
@@ -531,7 +531,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span class="leader">I spent some time</span><span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</span></p>
+              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> spent some time</span><span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</span></p>
             </div>
           </div>
         </div>
