--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
           <div class="wrapper">
             <div class="introtext sizable">
-              <p><span style="margin-left:0" class="dropcap">F</span><span class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful works ever created in print. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, masterpieces from the Kelmscott and Doves presses, Limited Editions and Grolier Club releases, Philip Smith bindings, books illustrated by Picasson and Braqua, and other breathtaking books.</span></p>
+              <p><span style="margin-left:0" class="dropcap">F</span><span class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
             </div>
           </div>
         </div>
@@ -201,6 +201,16 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>The Making of the Bruce Rogers World Bible</h3>
+                <ul>
+                  <li>World Publishing Co., 1949</li>
+                </ul>
+                <h3>The Bruce Rogers World Bible</h3>
+                <ul>
+                  <li>World Publishing Co., 1949</li>
+                  <li>Designed by Bruce Rogers</li>
+                  <li>Printed by A. Colish</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -217,6 +227,27 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Prospectus</h3>
+                <ul>
+                  <li>The Bruce Rogers World Bible</li>
+                  <li>World Publishing Co., 1949</li>
+                </ul>
+                <h3>Facsimiles</h3>
+                <ul>
+                  <li>Typographic sample</li>
+                  <li>Galley Sheet</li>
+                  <li>Letter from  Rogers to Colish</li>
+                  <li>Composite of translator page</li>
+                  <li>(From the Press of A. Colish Archives, University of elaware)</li>
+                </ul>
+                <h3>Other items</h3>
+                <ul>
+                  <li>Metal chase with type</li>
+                  <li>Composing stick with type</li>
+                  <li>Monotype matrix case</li>
+                  <li>Picture of Monotype machine</li>
+                  <li>Printers’ ornaments</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -235,14 +266,14 @@
               <div class="infoinner">
                 <h3>Music, Deep Rivers In My Soul</h3>
                 <ul>
-                  <li>New York: Limited Editions Club, 2003</li>
+                  <li>Limited Editions Club, 2003</li>
                   <li>Poem by Maya Angelou</li>
                   <li>Etchings by Dean Mitchell</li>
                   <li>Music by Wynton Marsalis</li>
                 </ul>
                 <h3>Fra Luca de Pacioli of Borgo S. Sepulcro</h3>
                 <ul>
-                  <li>New York: Grolier Club, 1931</li>
+                  <li>Grolier Club, 1931</li>
                   <li>Written by Stanley Morison</li>
                   <li>Design by Bruce Rogers</li>
                 </ul>
@@ -262,6 +293,21 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>The Doves Press Bible</h3>
+                <ul>
+                  <li>Doves Press, 1904</li>
+                  <li>Designed and printed by Emery Walker and T. J. Cobden-anderson</li>
+                </ul>
+                <h3>The Four Gospels of the Lord Jesus Christ</h3>
+                <ul>
+                  <li>Golden Cockerel Press, 1931</li>
+                  <li>Designed and printed by Robert Gibbings and Eric Gill</li>
+                </ul>
+                <h3>Special binding for The Four Gospels</h3>
+                <ul>
+                  <li>Lilly Library Collection</li>
+                  <li>Bound by William Matthews</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -436,6 +482,10 @@
           <div class="wrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Fully Justified</h3>
+                <ul>
+                  <li>If you’ve ever done letterpress, you know what it takes to get justified type. I cut a bunch of tiny paper spacers to get it just right.</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -501,13 +551,13 @@
               <div class="infoinner">
                 <h3>Process</h3>
                 <ul>
-                  <li>Linoleum cut &amp;amp; letterpress</li>
+                  <li>Linoleum cut &amp; letterpress</li>
                   <li>Printed on a Vandercook SP-15</li>
                   <li>Bound in hard case</li>
                 </ul>
                 <h3>Media</h3>
                 <ul>
-                  <li>Univers &amp;amp; Fortune Roman type</li>
+                  <li>Univers &amp; Fortune Roman type</li>
                   <li>Somerset paper</li>
                 </ul>
                 <h3>Specs</h3>
