--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
               <h3>Interface Design</h3>
               <p><span style="margin-left:-0.24em" class="dropcap">T</span><span class="leader">he BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/sg.png"></div>
           </div>
         </div>
@@ -122,6 +124,8 @@
               <h3>Web Design</h3>
               <p><span style="margin-left:-0.1em" class="dropcap">W</span><span class="leader">hen the BYU web community</span><span> was tasked with redesigning BYU’s home page, it was most important to me that we achieve the right mood. We took inspiration from some of the beautiful places around campus and aimed for the same sort of dignified, inviting feeling on the web. The accompanying templates are meant to make it easy for campus entities to create sites that fit with the BYU web brand.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
@@ -136,6 +140,8 @@
               <h3>Interface Design</h3>
               <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> worked extensively</span><span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
@@ -150,6 +156,8 @@
               <h3>Exhibition Design</h3>
               <p><span style="margin-left:0" class="dropcap">F</span><span class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
@@ -335,6 +343,8 @@
               <h3>Poster / Self-promotion</h3>
               <p><span style="margin-left:-0.2em" class="dropcap">I</span><span class="leader">nsects have fascinated me</span><span> ever since my freshman biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects to date.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
@@ -429,6 +439,8 @@
               <h3>Letterpress</h3>
               <p><span style="margin-left:-0.24em" class="dropcap">T</span><span class="leader">his broadside</span><span> was created to celebrate marriage, with text taken from CS Lewis’ <i>Mere Christianity</i>. It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
@@ -495,6 +507,8 @@
               <h3>Letterpress / Linocut / Bookbinding</h3>
               <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> often prefer</span><span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/img/jonahintro.png"></div>
           </div>
         </div>
@@ -574,6 +588,8 @@
               <h3>Research / Writing / Publication Design</h3>
               <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> spent some time</span><span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</span></p>
             </div>
+          </div>
+          <div class="wrapper">
             <div class="introimage"><img src="img/title-pages/"></div>
           </div>
         </div>
