Update front page

--- a/index.html
+++ b/index.html
@@ -30,50 +30,15 @@
         </div>
         <div id="intro-1" class="slide intro last">
           <div class="wrapper">
-            <div class="sizable">
-              <ul class="projectThumb">
-                <li><a href="#gifts" class="projectTitle">Sacred Gifts</a></li>
-                <li><a href="#gifts-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/sg_nav.jpg"></a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#byu" class="projectTitle">BYU Web</a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#ls" class="projectTitle">BYU Learning Suite</a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#thesis" class="projectTitle">Connections</a></li>
-                <li><a href="#thesis-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/thesis_cards.jpg"></a></li>
-                <li><a href="#thesis-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/thesis_brochure.jpg"></a></li>
-                <li><a href="#thesis-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/thesis_bible.jpg"></a></li>
-                <li><a href="#thesis-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/thesis_bible1.jpg"></a></li>
-                <li><a href="#thesis-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/thesis_society.jpg"></a></li>
-                <li><a href="#thesis-7"><span class="slideLink visuallyhidden">Slide 7</span><img src="img/400w/thesis_doves.jpg"></a></li>
-                <li><a href="#thesis-8"><span class="slideLink visuallyhidden">Slide 8</span><img src="img/400w/thesis_cases.jpg"></a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#bugs" class="projectTitle">Specimens</a></li>
-                <li><a href="#bugs-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/bugs_typographic.jpg"></a></li>
-                <li><a href="#bugs-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/bugs_fabulous.jpg"></a></li>
-                <li><a href="#bugs-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/bugs_bee.jpg"></a></li>
-                <li><a href="#bugs-5"><span class="slideLink visuallyhidden">Slide 5</span><img src="img/400w/bugs2.jpg"></a></li>
-                <li><a href="#bugs-6"><span class="slideLink visuallyhidden">Slide 6</span><img src="img/400w/bugs1.jpg"></a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#love" class="projectTitle">Love</a></li>
-                <li><a href="#love-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/love1.jpg"></a></li>
-                <li><a href="#love-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/love2.jpg"></a></li>
-                <li><a href="#love-4"><span class="slideLink visuallyhidden">Slide 4</span><img src="img/400w/love.jpg"></a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#jonah" class="projectTitle">Jonah</a></li>
-                <li><a href="#jonah-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/jonah1.jpg"></a></li>
-                <li><a href="#jonah-3"><span class="slideLink visuallyhidden">Slide 3</span><img src="img/400w/jonah2.jpg"></a></li>
-              </ul>
-              <ul class="projectThumb">
-                <li><a href="#ornate" class="projectTitle">Ornate</a></li>
-                <li><a href="#ornate-2"><span class="slideLink visuallyhidden">Slide 2</span><img src="img/400w/ornate_abuse_close.jpg"></a></li>
-              </ul>
+            <div class="sizable"><a href="#gifts" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Sacred Gifts</span></span><img src="img/400w/sg_nav.jpg"></a><a href="#byu" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Web</span></span></a><a href="#ls" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">BYU Learning Suite</span></span></a><a href="#thesis" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Connections</span></span><img src="img/400w/thesis_cards.jpg"></a><a href="#bugs" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Specimens</span></span><img src="img/400w/bugs_typographic.jpg"></a><a href="#love" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Love</span></span><img src="img/400w/love1.jpg"></a><a href="#jonah" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Jonah</span></span><img src="img/400w/jonah1.jpg"></a><a href="#ornate" class="projectLink"><span class="projectDesc">
+                  <!-- span.projectType #{project.desc}--><span class="projectTitle">Ornate</span></span><img src="img/400w/ornate_abuse_close.jpg"></a>
             </div>
           </div>
         </div>
@@ -84,13 +49,13 @@
         </div>
         <div id="gifts-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Interface Design</h3>
-              <p><span style="margin-left:-0.24em" class="dropcap">T</span><span class="leader">he BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/sg.png"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/sg.png"></div>
+            <div class="introtext">
+              <h3>Interface Design</h3>
+              <p><span style="margin-left:-0.24em" class="dropcap">T</span><span style="margin-left:-0.1em" class="leader">he BYU Museum of Art</span><span> wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.</span></p>
+            </div>
           </div>
         </div>
         <div id="gifts-2" class="slide last">
@@ -120,13 +85,13 @@
         </div>
         <div id="byu-1" class="slide intro last">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Web Design</h3>
-              <p><span style="margin-left:-0.1em" class="dropcap">W</span><span class="leader">hen the BYU web community</span><span> was tasked with redesigning BYU’s home page, it was most important to me that we achieve the right mood. We took inspiration from some of the beautiful places around campus and aimed for the same sort of dignified, inviting feeling on the web. The accompanying templates are meant to make it easy for campus entities to create sites that fit with the BYU web brand.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/byu.png"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Web Design</h3>
+              <p><span style="margin-left:-0.1em" class="dropcap">O</span><span style="margin-left:-0.3em" class="leader">ur top priority</span><span> for the BYU home page was achieving the right mood. We searched for inspiration in some of the most beautiful places around campus and worked to create the same dignified, inviting feeling on the web site. The BYU web templates make it easy for anyone on campus to build sites that fit within the brand.</span></p>
+            </div>
           </div>
         </div>
       </div>
@@ -136,13 +101,13 @@
         </div>
         <div id="ls-1" class="slide intro last">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Interface Design</h3>
-              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> worked extensively</span><span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Interface Design</h3>
+              <p><span style="margin-left:0" class="dropcap">I</span><span style="margin-left:-0.1em" class="leader"> worked extensively</span><span> with instructional designers and progammers to help create the BYU Learning Suite. I wrote a style guide and created hundreds of page mockups. I also had a big part in writing the CSS for the site, and part of my ongoing work is to train new designers and programmers on best practices in web design and web application programming.</span></p>
+            </div>
           </div>
         </div>
       </div>
@@ -152,13 +117,13 @@
         </div>
         <div id="thesis-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Exhibition Design</h3>
-              <p><span style="margin-left:0" class="dropcap">F</span><span class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Exhibition Design</h3>
+              <p><span style="margin-left:0" class="dropcap">F</span><span style="margin-left:-0.1em" class="leader">or my MFA thesis</span><span> I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful books in the world. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, Kelmscott and Doves press masterpieces, Limited Editions and Grolier Club releases, Philip Smith bindings, Picasso and Braque illustrations, and other breathtaking works.</span></p>
+            </div>
           </div>
         </div>
         <div id="thesis-2" class="slide">
@@ -339,13 +304,13 @@
         </div>
         <div id="bugs-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Poster / Self-promotion</h3>
-              <p><span style="margin-left:-0.2em" class="dropcap">I</span><span class="leader">nsects have fascinated me</span><span> ever since my freshman biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects to date.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Poster / Self-promotion</h3>
+              <p><span style="margin-left:-0.2em" class="dropcap">I</span><span style="margin-left:-0.1em" class="leader">nsects have fascinated me</span><span> ever since my freshman biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects to date.</span></p>
+            </div>
           </div>
         </div>
         <div id="bugs-2" class="slide">
@@ -435,13 +400,13 @@
         </div>
         <div id="love-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Letterpress</h3>
-              <p><span style="margin-left:-0.24em" class="dropcap">T</span><span class="leader">his broadside</span><span> was created to celebrate marriage, with text taken from CS Lewis’ <i>Mere Christianity</i>. It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Letterpress</h3>
+              <p><span style="margin-left:-0.24em" class="dropcap">T</span><span style="margin-left:-0.1em" class="leader">his broadside</span><span> was created to celebrate marriage, with text taken from CS Lewis’ <i>Mere Christianity</i>. It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.</span></p>
+            </div>
           </div>
         </div>
         <div id="love-2" class="slide">
@@ -503,13 +468,13 @@
         </div>
         <div id="jonah-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Letterpress / Linocut / Bookbinding</h3>
-              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> often prefer</span><span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/jonah.png"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/img/jonahintro.png"></div>
+            <div class="introtext">
+              <h3>Letterpress / Linocut / Bookbinding</h3>
+              <p><span style="margin-left:0" class="dropcap">I</span><span style="margin-left:-0.1em" class="leader"> often prefer</span><span> relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.</span></p>
+            </div>
           </div>
         </div>
         <div id="jonah-2" class="slide">
@@ -584,13 +549,13 @@
         </div>
         <div id="ornate-1" class="slide intro">
           <div class="wrapper">
-            <div class="introtext">
-              <h3>Research / Writing / Publication Design</h3>
-              <p><span style="margin-left:0" class="dropcap">I</span><span class="leader"> spent some time</span><span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</span></p>
-            </div>
+            <div class="introimage"><img src="img/title-pages/"></div>
           </div>
           <div class="wrapper">
-            <div class="introimage"><img src="img/title-pages/"></div>
+            <div class="introtext">
+              <h3>Research / Writing / Publication Design</h3>
+              <p><span style="margin-left:0" class="dropcap">I</span><span style="margin-left:-0.1em" class="leader"> spent some time</span><span> studying some of the art movements from around the turn of the last century (especially Vienna Secession and Arts and Crafts), and decided to experiment with some of their ideas. I brought together various writings exploring the use of ornament, translated some of the articles from the original German, and created a magazine on the subject.</span></p>
+            </div>
           </div>
         </div>
         <div id="ornate-2" class="slide last">
